--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -2,6 +2,7 @@
 
 body{
   font-family: 'Noto Sans TC', sans-serif;
+  line-height: 1.5;
 }
 
 h2{
@@ -39,13 +40,13 @@ h1 a{
 
 .header li{
   font-size: 20px;
-  margin-left: 64px;
 }
 
 .header a{
   text-decoration: none;
   color:#fff;
   display: block;
+  padding: 16px 32px;
 }
 
 .header li a:hover{
@@ -412,7 +413,7 @@ h1 a{
 }
 
 .wrap{
-  width: 1110px;
+  max-width: 1110px;
   margin: 0 auto;
 }
 
