--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -2,7 +2,6 @@
 
 body{
   font-family: 'Noto Sans TC', sans-serif;
-  line-height: 1.5;
 }
 
 h2{
@@ -42,7 +41,7 @@ h1 a{
   font-size: 20px;
 }
 
-.header a{
+.header ul a{
   text-decoration: none;
   color:#fff;
   display: block;
@@ -57,7 +56,7 @@ h1 a{
 
 .full-pic{
   height: 840px;
-  background-image:url('https://github.com/hexschool/webLayoutTraining1st/blob/master/week3/banner-sm.png?raw=true');
+  background-image:url('https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/banner.png');
   background-size:cover;
   background-position:center;
   background-repeat:no-repeat;
@@ -137,17 +136,17 @@ h1 a{
   padding-bottom: 80px;
 }
 
-.classic p{
+.classic a{
   font-weight: bold;
   font-size: 48px;
   color: #AA0601;
   margin-left: 30px;
+  display: block;
+  text-decoration: none;
 }
 
 .classic img{
   display: block;
-  /*width: 635px;/    
-  height: 320px;*/
   height: auto;
   max-width: 635px;
 }
@@ -162,7 +161,7 @@ h1 a{
   display: flex;
 }
 
-.optical p{
+.optical a{
   display: flex;
   align-items: center;
   font-family: Roboto;
@@ -172,6 +171,7 @@ h1 a{
 
 .sunglasses{
   display: flex;
+  align-items: center;
   flex-direction:row-reverse;  
   margin-top: 32px;
   margin-bottom: 32px;
@@ -191,6 +191,7 @@ h1 a{
 
 .functional{
   display: flex;
+  align-items: center;
 }
 
 .functional p{
@@ -242,45 +243,70 @@ h1 a{
 
 .joint-content{
   display: flex;
+  justify-content: space-between;
   margin: 0 auto;
 }
 
 .double{
-  background-image: url('https://github.com/hexschool/webLayoutTraining1st/blob/master/week3/product-8.png?raw=true://github.com/hexschool/webLayoutTraining1st/blob/master/week3/bg.png?raw=truehttps://github.com/hexschool/webLayoutTraining1st/blob/master/week3/banner.png?raw=true');
-  background-repeat: no-repeat;
-  width: 540px;
-  height: 472px;
-  background-color: rgba(255, 255, 255, 0.5);/*為什麼沒有效果呢*/
-  display: flex;
-  justify-content: center;
-  align-items: center;
   margin-right: 30px;
+  width: 49%;
+  height: 472px;
+  position:relative;
+  background: #fff;
 }
 
-.double p{
+.double-img{
+  max-width:100%;
+  height: auto;
+  display: block;
+  opacity:.5;
+}
+
+.double a{
   font-size: 72px;
   color:#AA0601;
   font-family: Roboto;
   font-weight: bold;
+  text-decoration: none;
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform:translate(-50%,-50%);
+  white-space:nowrap;
+  background-size: cover;
 }
 
 .youth{
-  background-image: url('https://github.com/hexschool/webLayoutTraining1st/blob/master/week3/product-9.png?raw=true');
-  background-color: rgba(255,255,255,0.5);
-  background-repeat: no-repeat;
-  background-size: contain;
-  width: 540px;
+  width: 49%;
   height: 472px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  position:relative;
 }
 
-.youth p{
+.youth-img{
+  width: 100%;
+  height: 100%;
+  background-image: url('https://github.com/hexschool/webLayoutTraining1st/blob/master/week3/product-9.png?raw=true');
+  display: block;
+  background-repeat: no-repeat;
+  background-size: contain;
+  display: inline-block;
+}
+
+.youth a{
   font-size: 72px;
   color:#AA0601;
   font-family: Roboto;
   font-weight: bold;
+  text-decoration: none;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(255,255,255,.5);
+  position:absolute;
+  top:0;
+  left:0;
 }
 
 .suggest{
@@ -308,18 +334,19 @@ h1 a{
 }
 
 .suggest-content img{
-  width: 255px;
+  max-width: 100%;
   height: auto;
   display: block;
-  margin-right: -16px;
-  margin-left: -16px;
 }
 
 .suggest-content li{
   border:1px solid #DEE2E6;
   padding-bottom: 15px;
-  padding-left: 16px;
-  padding-right: 16px;
+  width: 23%;
+}
+
+.suggest-content p{
+  padding: 0 25px;
 }
 
 .customer{
@@ -365,45 +392,52 @@ h1 a{
   line-height: 30px;
 }
 
-.contact-wrap label{
-  display: block;
+.form-text label{
+  display: inline-block;
   margin-bottom: 4px;
 }
 
-.contact-wrap input{
+.form-text input{
   margin-bottom: 16px;
   border:1px solid #000;
-  width: 100%;
-  display: block;
+  display: inline-block;
   background: none;
   padding: 14px 16px;
+  width: 100%;
 }
 
 .input-opinion{
+  background: none;
+  width: 100%;
   height: 136px;
+  resize:none;
+  margin-bottom: 16px;
+  padding: 14px 16px;
 }
 
-.input-opinion::placeholder {
-  vertical-align: top;
-}
-
-.contact-wrap .input-ckeck{
-  width: 24px;
-  height: 24px;
-  display: inline-block;
+.form-checkbox{
+  margin-bottom: 42px;
 } 
 
-.contact .agree-text{
-  display: inline-block;
-  margin-bottom: 42px;
+.input-check{
+  border:1px solid #000;
+  background: none;
+  cursor:pointer;
 }
 
-.contact .submit{
+.agree-text{
+  display: inline-block;
+}
+
+.submit{
   background: #AA0601;
   color:#fff;
   width: 350px;
   height: 54px;
   margin: 0 auto;
+  display: block;
+  border:none;
+  cursor:pointer;
 }
 
 .footer{
@@ -413,7 +447,7 @@ h1 a{
 }
 
 .wrap{
-  max-width: 1110px;
+  width: 1110px;
   margin: 0 auto;
 }
 
@@ -454,6 +488,7 @@ h1 a{
   text-decoration: none;
   color:#fff;
   display: block;
+  padding: 10px 20px;
 }
 
 .footer-menu a:hover{
@@ -477,9 +512,6 @@ h1 a{
 .phone a{
   text-decoration: none;
   color:white;
-}
-
-.phone p{
   display: inline;
   font-size: 36px;
 }
@@ -499,9 +531,6 @@ h1 a{
 .email a{
   text-decoration: none;
   color:#fff;
-}
-
-.email p{
   font-size: 36px;
   display: inline;
 }
