--- a/scss/_series.scss
+++ b/scss/_series.scss
@@ -2,7 +2,6 @@
 
 body{
   font-family: 'Noto Sans TC','Roboto', sans-serif;
-  line-height: 1.5;
 }
 
 *,*:before,*:after{
@@ -34,7 +33,7 @@ h1 a{
   font-size: 20px;
 }
 
-.header a{
+.header ul a{
   text-decoration: none;
   color:#fff;
   display: block;
@@ -48,7 +47,7 @@ h1 a{
 
 .series-menu{
   display: flex;
-  justify-content: center
+  justify-content: center;
 }
 
 .series-menu p{
@@ -63,7 +62,9 @@ h1 a{
   border:1px solid #DCDCDC;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center;  
+  flex-grow:1;
+  flex-shrink:0;
 }
 
 .diamond{
@@ -84,13 +85,16 @@ h1 a{
 .series-menu a{
   text-decoration: none;
   color:#000;
-  width: auto;
-  height: auto;
   display: block;
-  padding: 24px 60px;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 
-.series-menu a:hover{
+.series-menu li{  
+  border-bottom:15px solid transparent
+}
+
+.series-menu li:hover{
   border-bottom:15px solid #AA0601;
 }
 
@@ -102,14 +106,13 @@ h1 a{
 
 .glasses-scene{
   display: block;
-  width: 48%;
+  max-width: 48%;
   height: auto;
-  margin-right: 30px;
 }
 
 .glasses-people{
   display: block;
-  width: 48%;
+  max-width: 48%;
   height: auto;
 }
 
@@ -139,28 +142,24 @@ h1 a{
 }
 
 .series-cellu li{
-  margin-right: 30px;
   margin-bottom: 104px;
-  width:20%;
+  width:23%;
   height: auto;
 }
 
 .series-cellu img{
-  width: 255px;
-  height: 164px;
+  width: 100%;
   display: block;
 }
 
 .glasses-brief{
   display: flex;
   justify-content: space-between;
-  width: 100%;
 }
 
 .model{
   font-size: 24px;
   font-family: Roboto;
-  margin-right: 35px;
   line-height: 36px;
 }
 
@@ -218,8 +217,6 @@ last-page, next-page{
   color:white;
 }
 
-
-
 .footer{
   background: #AA0601;
   padding-top: 36px;
@@ -227,7 +224,7 @@ last-page, next-page{
 }
 
 .wrap{
-  max-width: 1110px;
+  width: 1110px;
   margin: 0 auto;
 }
 
@@ -268,6 +265,7 @@ last-page, next-page{
   text-decoration: none;
   color:#fff;
   display: block;
+  padding: 10px 20px;
 }
 
 .footer-menu a:hover{
@@ -291,9 +289,6 @@ last-page, next-page{
 .phone a{
   text-decoration: none;
   color:white;
-}
-
-.phone p{
   display: inline;
   font-size: 36px;
 }
@@ -313,9 +308,6 @@ last-page, next-page{
 .email a{
   text-decoration: none;
   color:#fff;
-}
-
-.email p{
   font-size: 36px;
   display: inline;
 }
