--- a/scss/all.css
+++ b/scss/all.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -103,13 +102,13 @@ h1 a {
 
 .header li {
   font-size: 20px;
-  margin-left: 64px;
 }
 
-.header a {
+.header ul a {
   text-decoration: none;
   color: #fff;
   display: block;
+  padding: 16px 32px;
 }
 
 .header li a:hover {
@@ -119,7 +118,7 @@ h1 a {
 
 .full-pic {
   height: 840px;
-  background-image: url("https://github.com/hexschool/webLayoutTraining1st/blob/master/week3/banner-sm.png?raw=true");
+  background-image: url("https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/banner.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -217,17 +216,17 @@ h1 a {
   padding-bottom: 80px;
 }
 
-.classic p {
+.classic a {
   font-weight: bold;
   font-size: 48px;
   color: #AA0601;
   margin-left: 30px;
+  display: block;
+  text-decoration: none;
 }
 
 .classic img {
   display: block;
-  /*width: 635px;/    
-  height: 320px;*/
   height: auto;
   max-width: 635px;
 }
@@ -251,7 +250,7 @@ h1 a {
   display: flex;
 }
 
-.optical p {
+.optical a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -267,6 +266,9 @@ h1 a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: reverse;
       -ms-flex-direction: row-reverse;
@@ -295,6 +297,9 @@ h1 a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .functional p {
@@ -352,42 +357,66 @@ h1 a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin: 0 auto;
 }
 
 .double {
-  background-image: url("https://github.com/hexschool/webLayoutTraining1st/blob/master/week3/product-8.png?raw=true://github.com/hexschool/webLayoutTraining1st/blob/master/week3/bg.png?raw=truehttps://github.com/hexschool/webLayoutTraining1st/blob/master/week3/banner.png?raw=true");
-  background-repeat: no-repeat;
-  width: 540px;
-  height: 472px;
-  background-color: rgba(255, 255, 255, 0.5);
-  /*為什麼沒有效果呢*/
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   margin-right: 30px;
+  width: 49%;
+  height: 472px;
+  position: relative;
+  background: #fff;
 }
 
-.double p {
+.double-img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  opacity: .5;
+}
+
+.double a {
   font-size: 72px;
   color: #AA0601;
   font-family: Roboto;
   font-weight: bold;
+  text-decoration: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  white-space: nowrap;
+  background-size: cover;
 }
 
 .youth {
+  width: 49%;
+  height: 472px;
+  position: relative;
+}
+
+.youth-img {
+  width: 100%;
+  height: 100%;
   background-image: url("https://github.com/hexschool/webLayoutTraining1st/blob/master/week3/product-9.png?raw=true");
-  background-color: rgba(255, 255, 255, 0.5);
+  display: block;
   background-repeat: no-repeat;
   background-size: contain;
-  width: 540px;
-  height: 472px;
+  display: inline-block;
+}
+
+.youth a {
+  font-size: 72px;
+  color: #AA0601;
+  font-family: Roboto;
+  font-weight: bold;
+  text-decoration: none;
+  width: 100%;
+  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -397,13 +426,10 @@ h1 a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-
-.youth p {
-  font-size: 72px;
-  color: #AA0601;
-  font-family: Roboto;
-  font-weight: bold;
+  background: rgba(255, 255, 255, 0.5);
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .suggest {
@@ -435,18 +461,19 @@ h1 a {
 }
 
 .suggest-content img {
-  width: 255px;
+  max-width: 100%;
   height: auto;
   display: block;
-  margin-right: -16px;
-  margin-left: -16px;
 }
 
 .suggest-content li {
   border: 1px solid #DEE2E6;
   padding-bottom: 15px;
-  padding-left: 16px;
-  padding-right: 16px;
+  width: 23%;
+}
+
+.suggest-content p {
+  padding: 0 25px;
 }
 
 .customer {
@@ -492,57 +519,52 @@ h1 a {
   line-height: 30px;
 }
 
-.contact-wrap label {
-  display: block;
+.form-text label {
+  display: inline-block;
   margin-bottom: 4px;
 }
 
-.contact-wrap input {
+.form-text input {
   margin-bottom: 16px;
   border: 1px solid #000;
-  width: 100%;
-  display: block;
+  display: inline-block;
   background: none;
   padding: 14px 16px;
+  width: 100%;
 }
 
 .input-opinion {
+  background: none;
+  width: 100%;
   height: 136px;
+  resize: none;
+  margin-bottom: 16px;
+  padding: 14px 16px;
 }
 
-.input-opinion::-webkit-input-placeholder {
-  vertical-align: top;
-}
-
-.input-opinion:-ms-input-placeholder {
-  vertical-align: top;
-}
-
-.input-opinion::-ms-input-placeholder {
-  vertical-align: top;
-}
-
-.input-opinion::placeholder {
-  vertical-align: top;
-}
-
-.contact-wrap .input-ckeck {
-  width: 24px;
-  height: 24px;
-  display: inline-block;
-}
-
-.contact .agree-text {
-  display: inline-block;
+.form-checkbox {
   margin-bottom: 42px;
 }
 
-.contact .submit {
+.input-check {
+  border: 1px solid #000;
+  background: none;
+  cursor: pointer;
+}
+
+.agree-text {
+  display: inline-block;
+}
+
+.submit {
   background: #AA0601;
   color: #fff;
   width: 350px;
   height: 54px;
   margin: 0 auto;
+  display: block;
+  border: none;
+  cursor: pointer;
 }
 
 .footer {
@@ -603,6 +625,7 @@ h1 a {
   text-decoration: none;
   color: #fff;
   display: block;
+  padding: 10px 20px;
 }
 
 .footer-menu a:hover {
@@ -630,9 +653,6 @@ h1 a {
 .phone a {
   text-decoration: none;
   color: white;
-}
-
-.phone p {
   display: inline;
   font-size: 36px;
 }
@@ -656,9 +676,6 @@ h1 a {
 .email a {
   text-decoration: none;
   color: #fff;
-}
-
-.email p {
   font-size: 36px;
   display: inline;
 }
@@ -756,13 +773,13 @@ h1 a {
 
 .header li {
   font-size: 20px;
-  margin-left: 64px;
 }
 
-.header a {
+.header ul a {
   text-decoration: none;
   color: #fff;
   display: block;
+  padding: 16px 32px;
 }
 
 .header li a:hover {
@@ -798,6 +815,11 @@ h1 a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
 }
 
 .diamond {
@@ -818,13 +840,16 @@ h1 a {
 .series-menu a {
   text-decoration: none;
   color: #000;
-  width: auto;
-  height: auto;
   display: block;
-  padding: 24px 60px;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 
-.series-menu a:hover {
+.series-menu li {
+  border-bottom: 15px solid transparent;
+}
+
+.series-menu li:hover {
   border-bottom: 15px solid #AA0601;
 }
 
@@ -840,14 +865,13 @@ h1 a {
 
 .glasses-scene {
   display: block;
-  width: 48%;
+  max-width: 48%;
   height: auto;
-  margin-right: 30px;
 }
 
 .glasses-people {
   display: block;
-  width: 48%;
+  max-width: 48%;
   height: auto;
 }
 
@@ -882,15 +906,13 @@ h1 a {
 }
 
 .series-cellu li {
-  margin-right: 30px;
   margin-bottom: 104px;
-  width: 20%;
+  width: 23%;
   height: auto;
 }
 
 .series-cellu img {
-  width: 255px;
-  height: 164px;
+  width: 100%;
   display: block;
 }
 
@@ -901,13 +923,11 @@ h1 a {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  width: 100%;
 }
 
 .model {
   font-size: 24px;
   font-family: Roboto;
-  margin-right: 35px;
   line-height: 36px;
 }
 
@@ -1027,6 +1047,7 @@ last-page, next-page {
   text-decoration: none;
   color: #fff;
   display: block;
+  padding: 10px 20px;
 }
 
 .footer-menu a:hover {
@@ -1054,9 +1075,6 @@ last-page, next-page {
 .phone a {
   text-decoration: none;
   color: white;
-}
-
-.phone p {
   display: inline;
   font-size: 36px;
 }
@@ -1080,9 +1098,6 @@ last-page, next-page {
 .email a {
   text-decoration: none;
   color: #fff;
-}
-
-.email p {
   font-size: 36px;
   display: inline;
 }
